Version 17 -- fixed flex-wrap and media queries

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,8 +37,6 @@ body {
     box-shadow: 0 .125em .25em rgba(0, 0, 0, 0.1);
 }
 
-
-
 .list-item-container {
     display: flex;
     align-items: center;
@@ -142,6 +140,5 @@ button:disabled {
 
     .number-of-items-input {
       width: 10%;
-      background-color: red;
     }
 }
